--- a/youthtransition/pages/ya-employment.html
+++ b/youthtransition/pages/ya-employment.html
@@ -418,23 +418,23 @@
                                         <div class="form-check form-check-inline pl-2">
                                             <label class="form-check-label">
                                                 <input type="radio" class="form-check-input"
-                                                       name="evictedhowlong" value="sixtotwelve"
-                                                       formControlName="evictedhowlong"> 6 - 12 months
+                                                       name="evictedhowlong" value="seventotwelve"
+                                                       formControlName="evictedhowlong"> 7 - 12 months
                                             </label>
                                         </div>
                                         <br/>
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
                                                 <input type="radio" class="form-check-input"
-                                                       name="evictedhowlong" value="twelvetoeighteen"
-                                                       formControlName="evictedhowlong"> 12 - 18 months
+                                                       name="evictedhowlong" value="thirthteentoeighteen"
+                                                       formControlName="evictedhowlong"> 13 - 18 months
                                             </label>
                                         </div>
                                         <div class="form-check form-check-inline">
                                             <label class="form-check-label">
                                                 <input type="radio" class="form-check-input"
-                                                       name="evictedhowlong" value="eighteentotwentyfour"
-                                                       formControlName="evictedhowlong"> 18 - 24 months
+                                                       name="evictedhowlong" value="nineteentotwentyfour"
+                                                       formControlName="evictedhowlong"> 19 - 24 months
                                             </label>
                                         </div>
                                     </fieldset>
